--- a/views/notebook/addNote.pug
+++ b/views/notebook/addNote.pug
@@ -6,13 +6,13 @@ block content
       h3 Add New Note
       form(action='/notebook/add-note', method='post')
         .form-group
-          label(id='title') Title
+          label(for='title') Title
           input.form-control(id='title', name='title',type='text',required, value=title)
         .form-group
-          label(id='slug') Slug
+          label(for='slug') Slug
           input.form-control(id='slug',name='slug',type='text', pattern='[a-z0-9\-]+', title='Small letters, digits and hyphens only',required, value=slug)
         .form-group
-          label(id='body') Body
+          label(for='body') Body
           textarea.form-control(id='body',name='body')= body
         input.btn.btn-primary(type='submit', value='Insert')
         a.btn.btn-secondary.m-l-1(href='/notebook') Cancel
