Add jquery-validation to form for matching passwords

--- a/views/user/changePassword.pug
+++ b/views/user/changePassword.pug
@@ -14,3 +14,6 @@ block content
         .recaptcha.m-x-auto.m-b-1.
           !{recaptcha}
         input.btn.btn-primary(type='submit', value='Change')
+
+block scripts
+  script(src='/js/user/changePassword.js')
