Add controller logic (half) for changing password

--- a/views/user/changePassword.pug
+++ b/views/user/changePassword.pug
@@ -8,12 +8,12 @@ block content
         .form-group
           input.form-control( id='current', name='current', type='password', maxlength=256, required, title='Must be between 6 to 256 characters', placeholder='Current Password')
         .form-group
-          input.form-control( id='new', name='new', type='password', minlength=6, maxlength=256, title='Must be between 6 to 256 characters', required, placeholder='New Password' )
+          input.form-control( id='newpass', name='newpass', type='password', minlength=6, maxlength=256, title='Must be between 6 to 256 characters', required, placeholder='New Password' )
         .form-group
           input.form-control( id='repeat', name='repeat', type='password', maxlength=256, required, title='Must be between 6 to 256 characters', placeholder='Repeat Password')
         .recaptcha.m-x-auto.m-b-1.
           !{recaptcha}
-        input.btn.btn-primary(type='submit', value='Change')
+        input.btn.btn-primary(type='submit', value='Submit')
 
 block scripts
   script(src='/js/user/changePassword.js')
