Confirm password during registration on front-end.
Closes #17

--- a/views/user/changePassword.pug
+++ b/views/user/changePassword.pug
@@ -16,4 +16,4 @@ block content
         input.btn.btn-primary(type='submit', value='Submit')
 
 block scripts
-  script(src='/js/user/changePassword.js')
+  script(src='/js/user/changePassword.min.js')
