Fix latex problem: Binom display error

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -16,7 +16,7 @@ html(lang='en')
         },
         "HTML-CSS": { availableFonts: ["TeX"] }
       });
-    script(type='text/javascript', src="https://cdn.mathjax.org/mathjax/latest/MathJax.js")
+    script(type='text/javascript', src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML")
 
   block head
 
