--- a/views/gateway/getChildren.pug
+++ b/views/gateway/getChildren.pug
@@ -26,7 +26,7 @@ block content
             tr
               td
                 span= index + 1
-                if adminMode
+                if (status === 'root')
                   span= " | " + val.ind
               if val.type !== "problem" && val.type !== "text"
                 td= val.title
