--- a/views/index/faq.pug
+++ b/views/index/faq.pug
@@ -19,7 +19,7 @@ block content
 
           p.list-group-item-text.m-t-1 If you have any question about any particular problem, then it is better to go its corresponding online judge and discuss it on their forum.
 
-          p.list-group-item-text.m-t-1 If you have question about some article on this site unrelated to any online judge, then please find some other place ( facebook group, codeforces, topcoder, codechef ) to discuss them. That will give me free publicity :)
+          p.list-group-item-text.m-t-1 If you have question about some article on this site unrelated to any online judge, then please find some other place ( facebook group, codeforces, topcoder, codechef ) to discuss them.
 
           p.list-group-item-text.m-t-1 If you want to discuss technical stuffs like mistakes in artcle/code, broken link/css or any kind of bugs, then we have <a href='https://github.com/forthright48/cpps/issues'>Github</a> for that.
 
