--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,2 +1,2 @@
 footer.text-xs-center.small.text-muted
-  p &copy; 2016 #[a(href="http://forthright48.com") Mohammad Samiul Islam] All Rights Reserved. #[a(href="mailto:forthright48@gmail.com") Contact Me].
+  p &copy; 2016-2017 #[a(href="http://forthright48.com") Mohammad Samiul Islam] All Rights Reserved. #[a(href="mailto:forthright48@gmail.com") Contact Me].
