Minor spelling fixes

--- a/views/index/index.pug
+++ b/views/index/index.pug
@@ -4,4 +4,4 @@ block content
   .row.flex-items-xs-middle.text-xs-center#fill-view
     .col-xs
       p A minimalistic portal for all about competitive programming and problem solving.
-      p Checkout <a href='/notbook'>Notebook</a> for theories and <a href='/gateway'> Gateway </a> for practice problems.
+      p Checkout <a href='/notebook'>Notebook</a> for theories and <a href='/gateway'> Gateway </a> for practice problems.
