--- a/views/notebook/viewNote.pug
+++ b/views/notebook/viewNote.pug
@@ -9,7 +9,12 @@ block content
           a.m-l-1(href=`/notebook/edit-note/${note.slug}`) #[i.fa.fa-edit] Edit
       .markdown-body.
         <h1> #{note.title} </h1>
-        <small><b> Created By: #{note.createdBy} &nbsp;&nbsp;&nbsp; Created At: #{note.createdAt.toDateString()} &nbsp;&nbsp;&nbsp; Updated By: #{note.updatedBy} &nbsp;&nbsp;&nbsp; Updated At: #{note.updatedAt.toDateString()} </b></small>
+        <small>  
+          Created By: #{note.createdBy} &nbsp;&nbsp;&nbsp;
+          Created At: #{note.createdAt.toDateString()} &nbsp;&nbsp;&nbsp;
+          Updated By: #{note.lastUpdatedBy} &nbsp;&nbsp;&nbsp;
+          Updated At: #{note.updatedAt.toDateString()}
+        </small>
         <br/>
         <br/>
         !{note.body}
