--- a/views/notebook/recent.pug
+++ b/views/notebook/recent.pug
@@ -4,7 +4,7 @@ block content
   .row.flex-items-xs-middle#fill-view
     .col-xs
       h3.text-xs-center Recently Added/Modified
-      table.table
+      table.table.table-cell-center
         thead
           tr
             th Modified
