--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -17,7 +17,7 @@ ul.nav.nav-tabs.m-b-1
     .nav-item.d-inline
       a.nav-link(data-toggle='dropdown', href='#') &nbsp;#[i.fa.fa-caret-down]
       .dropdown-menu
-        a.dropdown-item(href='#') Coming Soon
+        a.dropdown-item(href='/gateway/recent') Recent
   li.nav-item
     a.nav-link(href='/faq') FAQ
   li.nav-item
