Added invitation portal for root users

--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -17,3 +17,9 @@ block content
               i.fa.fa-key
             .col-xs-8
               a(href='/user/profile/change-password') Change Password
+        .list-group-item
+          .row
+            .col-xs-2
+              i.fa.fa-users
+            .col-xs-8
+              span= status
