--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -22,4 +22,4 @@ block content
             .col-xs-2
               i.fa.fa-users
             .col-xs-8
-              span= status
+              span= status[0].toUpperCase() + status.slice(1)
