--- a/views/gateway/recent.pug
+++ b/views/gateway/recent.pug
@@ -3,7 +3,7 @@ extends ../layouts/layout.pug
 block content
   .row.flex-items-xs-middle#fill-view
     .col-xs
-      h3.text-xs-center Recently Added/Modified
+      h3.text-center Recently Added/Modified
       table.table.table-cell-center
         thead
           tr
