--- a/views/index/faq.pug
+++ b/views/index/faq.pug
@@ -3,7 +3,7 @@ extends ../layouts/layout.pug
 block content
   .row.flex-items-xs-middle#fill-view
     .col-xs
-      h3.text-xs-center Frequently Asked Questions
+      h3.text-center Frequently Asked Questions
 
       .list-group
         .list-group-item
