--- a/views/notebook/addNote.pug
+++ b/views/notebook/addNote.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
   .row.flex-items-xs-middle#fill-view.m-b-1
-    .col-xs.text-xs-center
+    .col-xs.text-center
       h3 Add New Note
       form(action='/notebook/add-note', method='post')
         .form-group
