--- a/views/gateway/addItem.pug
+++ b/views/gateway/addItem.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
   .row.flex-items-xs-middle#fill-view.m-b-1
-    .col-sm.text-xs-center
+    .col-sm.text-center
       h3 Add Item
       form(action='/gateway/add-item', method='post')
         .row
