--- a/views/gateway/editItem.pug
+++ b/views/gateway/editItem.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
   .row.flex-items-xs-middle#fill-view.m-b-1
-    .col-sm.text-xs-center
+    .col-sm.text-center
       h3 Edit Item
       form(action='/gateway/edit-item', method='post')
         input(type='hidden', value=item._id, name='id')
