--- a/views/index/index.pug
+++ b/views/index/index.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle.text-xs-center#fill-view
+  .row.flex-items-xs-middle.text-center#fill-view
     .col-xs
       p A minimalistic portal for all about competitive programming and problem solving.
       p Checkout <a href='/notebook'>Notebook</a> for theories and <a href='/gateway'> Gateway </a> for practice problems.
