--- a/views/notebook/editNote.pug
+++ b/views/notebook/editNote.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
   .row.flex-items-xs-middle#fill-view.m-b-1
-    .col-sm.text-xs-center
+    .col-sm.text-center
       h3 Edit Note: #{slug}
       form(action=`/notebook/edit-note/${slug}`, method='post')
         .form-group
