--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
   .row.flex-items-xs-middle#fill-view
-    .offset-sm-3.col-sm-6.text-xs-center
+    .offset-sm-3.col-sm-6.text-center
       h2 Login
       form(action='/user/login', method='post')
         .form-group
