--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
   .row.flex-items-xs-middle#fill-view
-    .offset-sm-3.col-sm-6.text-xs-center
+    .offset-sm-3.col-sm-6.text-center
       h3 Profile Page
       ul.list-group
         .list-group-item
