--- a/views/user/verify.pug
+++ b/views/user/verify.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
   .row.flex-items-xs-middle#fill-view
-    .offset-sm-3.col-sm-6.text-xs-center
+    .offset-sm-3.col-sm-6.text-center
       .alert.alert-info.m-b-3 You have to verify your email address before proceeding.
       h3 Enter Verification Code
       form(action='/user/verify', method='post')
