--- a/views/notebook/addNote.pug
+++ b/views/notebook/addNote.pug
@@ -1,8 +1,8 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle#fill-view.m-b-1
-    .col-xs.text-center
+  .row.align-items-center#fill-view.m-b-1
+    .col.text-center
       h3 Add New Note
       form(action='/notebook/add-note', method='post')
         .form-group
