--- a/views/gateway/addItem.pug
+++ b/views/gateway/addItem.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle#fill-view.m-b-1
+  .row.align-items-center#fill-view.m-b-1
     .col-sm.text-center
       h3 Add Item
       form(action='/gateway/add-item', method='post')
