--- a/views/gateway/recent.pug
+++ b/views/gateway/recent.pug
@@ -1,8 +1,8 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle#fill-view
-    .col-xs
+  .row.align-items-center#fill-view
+    .col
       h3.text-center Recently Added/Modified
       table.table.table-cell-center
         thead
