--- a/views/index/faq.pug
+++ b/views/index/faq.pug
@@ -1,8 +1,8 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle#fill-view
-    .col-xs
+  .row.align-items-center#fill-view
+    .col
       h3.text-center Frequently Asked Questions
 
       .list-group
