--- a/views/user/register.pug
+++ b/views/user/register.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle#fill-view
+  .row.align-items-center#fill-view
     .offset-sm-3.col-sm-6.text-center
       h2 Register
       form(action='/user/register', method='post')
