--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,9 @@
 h1.text-center CPPS
 
 .row
-  .col.d-inline-flex.justify-content-between
+  .col.d-inline-flex.justify-content-between.nav-tabs
 
-    ul.nav.nav-tabs.m-b-1
+    ul.nav.m-b-1
       li.nav-item
         a.nav-link(href='/') #[i.fa.fa-home] Home
       li.nav-item.dropdown.d-inline-flex
@@ -25,7 +25,7 @@ h1.text-center CPPS
       li.nav-item
         a.nav-link(href='/bugsandhugs') Bugs & Hugs
 
-    ul.nav.nav-tabs.m-b-1
+    ul.nav.m-b-1
       if (login)
         if (superUser)
           li.nav-item
