--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,2 +1,2 @@
-footer.text-center.small.text-muted
+footer.text-center.small.text-muted.mt-2
   p &copy; 2016-2017 #[a(href="https://github.com/forthright48") Mohammad Samiul Islam] All Rights Reserved. #[a(href="mailto:forthright48@gmail.com") Contact Me].
