--- a/views/notebook/viewNote.pug
+++ b/views/notebook/viewNote.pug
@@ -8,8 +8,8 @@ block content
           a(href='/notebook/add-note') #[i.fa.fa-plus] Add
           a.m-l-1(href=`/notebook/edit-note/${note.slug}`) #[i.fa.fa-edit] Edit
       .markdown-body.
-        <h1> #{note.title} </h1>
-        <small>  
+        <h1 style="margin-bottom: 8px;"> #{note.title} </h1>
+        <small>
           Created By: #{note.createdBy} &nbsp;&nbsp;&nbsp;
           Created At: #{note.createdAt.toDateString()} &nbsp;&nbsp;&nbsp;
           Updated By: #{note.lastUpdatedBy} &nbsp;&nbsp;&nbsp;
