Center table head text

--- a/views/gateway/getChildren.pug
+++ b/views/gateway/getChildren.pug
@@ -14,7 +14,7 @@ block content
           span Solved in this folder: #{root.userCount}/#{root.totalCount}
         .col-sm-4
           h2= root.title
-      table.table.text-center.table-bordered
+      table.table.text-center.table-bordered.table-cell-center
         thead
           th Index
           th Title
