--- a/views/gateway/getChildren.pug
+++ b/views/gateway/getChildren.pug
@@ -32,17 +32,20 @@ block content
                 if (superUser)
                   span= " | " + val.ind
               if val.type !== "problem" && val.type !== "text"
-                td= val.title
+                td
+                  a(href="/gateway/get-children/"+val._id)= val.title
                 td
                   i.fa.fa-folder-o(aria-hidden="true")
                   span &nbsp; #{val.userCount}/#{val.totalCount}
                 td #[a(href="/gateway/get-children/"+val._id) Open]
               else if val.type === "text"
-                td= val.title
+                td
+                  a(href="/gateway/read-item/"+val._id)= val.title
                 td #[i.fa.fa-file-text-o(aria-hidden="true")]
                 td #[a(href="/gateway/read-item/"+val._id) Read]
               else if val.type === "problem"
-                td= val.platform + " " + val.pid + " - " + val.title
+                td
+                  a(target="_blank", href=val.link)= val.platform + " " + val.pid + " - " + val.title
                 td #[i.fa.fa-link(aria-hidden="true") ]
                 td
                   a(target="_blank", href=val.link) Solve
