Created logic to view user list

--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -8,3 +8,7 @@ block content
         a(href='/admin/invite-user').list-group-item.list-group-item-action.d-inline-flex.justify-content-between
           span Invite User
           i.fa.fa-user-plus
+      .list-group
+        a(href='/admin/user-list').list-group-item.list-group-item-action.d-inline-flex.justify-content-between
+          span User List
+          i.fa.fa-vcard
